@@ -1,7 +1,9 @@
 package com.example.socialweb.services.userServices;
 
 import com.example.socialweb.enums.ProfileCloseType;
+import com.example.socialweb.exceptions.RequestCancelledException;
 import com.example.socialweb.exceptions.WrongDataException;
+import com.example.socialweb.exceptions.WrongFormatException;
 import com.example.socialweb.models.entities.Message;
 import com.example.socialweb.models.entities.User;
 import com.example.socialweb.models.requestModels.MessageModel;
@@ -12,6 +14,7 @@ import com.example.socialweb.services.converters.MessageConverter;
 import com.example.socialweb.services.converters.UserConverter;
 import com.example.socialweb.services.validation.MessageValidation;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.data.redis.core.RedisTemplate;
 import org.springframework.security.web.firewall.RequestRejectedException;
 import org.springframework.stereotype.Service;
@@ -22,6 +25,7 @@ import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Slf4j
 public class MessageService {
     private final MessageRepository messageRepository;
     private final UserRepository userRepository;
@@ -30,36 +34,40 @@ public class MessageService {
     private final String HASH_KEY = "message";
 
     @Transactional
-    public List<ProfileModel> getAllSendersMessage(Long recipientId) throws WrongDataException {
-        return getAllByRecipientId(recipientId)
+    public List<ProfileModel> getAllSendersMessage(Long recipientId) throws RequestCancelledException {
+        List<ProfileModel> list = getAllByRecipientId(recipientId)
                 .stream()
                 .map(e -> UserConverter
                         .convertUserToProfileModel(e.getSender()))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
+        if (list.isEmpty())
+            throw new RequestCancelledException("You have not any messages.");
+        return list;
     }
 
     @Transactional
-    public void send(Long fromId, Long toId, MessageModel messageModel) {
+    public void send(Long fromId, Long toId, MessageModel messageModel) throws RequestCancelledException, WrongFormatException {
         User to = userRepository.findUserById(toId);
         User from = userRepository.findUserById(fromId);
         if (from.getId().equals(toId))
-            throw new RequestRejectedException("You can not sends messages to yourself.");
+            throw new RequestCancelledException("You can not sends messages to yourself.");
         else if (!MessageValidation.checkMessageValid(messageModel.getMessage()))
-            throw new RequestRejectedException("Size of this message is wrong.");
+            throw new WrongFormatException("Size of this message is wrong.");
         else if (to.getCloseType() == ProfileCloseType.CLOSE)
-            throw new RequestRejectedException("You can not send message to user with close profile.");
+            throw new RequestCancelledException("You can not send message to user with close profile.");
         else {
             from = userRepository.findUserById(from.getId());
             Message message = new Message.Builder(from, to)
                     .setMessage(messageModel.getMessage())
                     .build();
             messageRepository.save(message);
+            log.info("Message has been sent.");
         }
     }
 
     @Transactional
-    public List<Message> getAllByRecipientId(Long recipientId) throws WrongDataException {
+    public List<Message> getAllByRecipientId(Long recipientId) throws RequestCancelledException {
         List<Object> messageHashes = redisTemplate.opsForHash().values(HASH_KEY);
         if (messageHashes.isEmpty()) {
             List<Message> messages = messageRepository.findAllByRecipient(userService.getUserById(recipientId));
@@ -67,7 +75,7 @@ public class MessageService {
                 messages.forEach(m -> redisTemplate.opsForHash().put(HASH_KEY, m.getId(), MessageConverter.convertMessageToJsonString(m)));
                 return messages;
             }
-            throw new WrongDataException("You have not any messages.");
+            throw new RequestCancelledException("You have not any messages.");
         }
         return messageHashes.stream().map(h -> MessageConverter.convertJsonToMessage((String) h)).toList();
     }
@@ -78,7 +86,7 @@ public class MessageService {
     }
 
     @Transactional
-    public List<MessageModel> getMessagesFromUser(Long senderId, Long recipientId) {
+    public List<MessageModel> getMessagesFromUser(Long senderId, Long recipientId) throws RequestCancelledException {
         User sender = userRepository.findUserById(senderId);
         User recipient = userRepository.findUserById(recipientId);
         List<MessageModel> messages = getAllBySenderAndRecipient(sender, recipient)
@@ -88,8 +96,8 @@ public class MessageService {
         if (!messages.isEmpty())
             return messages;
         else if (sender.getId().equals(recipient.getId()))
-            throw new RequestRejectedException("You can not get messages from yourself.");
+            throw new RequestCancelledException("You can not get messages from yourself.");
         else
-            throw new RequestRejectedException("You have not got messages from this user.");
+            throw new RequestCancelledException("You have not got messages from this user.");
     }
 }
